compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_tuple_pattern_nested.snap
---
source: tests/fixtures.rs
assertion_line: 1431
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/tuple_pattern_nested.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × match pattern has incompatible type
   ╭─[tests/fixtures/diagnostics/types/tuple_pattern_nested.ml:4:6]
 3 │   dbg(match value {
 4 │     ("one", right) -> right,
   ·      ──┬──
   ·        ╰── pattern has type `String`, but the matched value has type `i64`
 5 │     _ -> 0
   ╰────
  help: use patterns with the same type as the matched value
